# environment_management_system

./: .gitignore  pyproject.toml  req.md
app/: main.py
app/admin_related/: create_admin.py
app/core/: config.py  database.py  security.py
app/graphql/: context.py  decorators.py  errors.py  permissions.py  schema.graphql  schema.py
app/graphql/resolvers/: __init__.py  mutation.py  query.py
app/graphql/resolvers/mutations/: __init__.py  environment_mutations.py  environment_types_mutations.py  integration_mutations.py  user_mutations.py
app/graphql/resolvers/queries/: __init__.py  environment_queries.py  environment_types_queries.py  integration_queries.py  user_queries.py
app/middlewares/: auth.py
app/models/: base.py  environment.py  integration.py  user.py  user_integration.py
app/permissions/: base.py  environment.py  integration.py  user.py
app/routers/: auth.py  health.py
app/schemas/: user.py
app/services/: environment_service.py  environment_type_service.py  integration_service.py  user_service.py
app/utils/: objectid.py
